# ocr-service

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.lite  GEMINI.md  Makefile  README.md  REFACTORING_PLAN.md  cspell.json  docker-compose.base.yml  docker-compose.lite.yml  docker-compose.prod.yml  docker-compose.yml  mise.toml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml  docker-image.yml  docker-publish.yml  release.yml  test.yml
scripts/: check_deps.py
specs/: schemas.py
src/: config.py  main.py
src/api/: dependencies.py
src/api/middleware/: error_handler.py
src/api/routes/: health.py  jobs.py  sync.py  upload.py
src/api/routes/v2/: dynamic_routes.py  ocr.py
src/models/: __init__.py  job.py  ocr_params.py  responses.py  upload.py
src/services/: job_manager.py  ocr_processor.py
src/services/ocr/: base.py  easyocr.py  ocrmac.py  registry.py  registry_v2.py  tesseract.py
src/services/ocr/engines/: __init__.py  easyocr.py  tesseract.py
src/utils/: hocr.py  metrics.py  validators.py
tests/: conftest.py
tests/contract/: test_api_contract.py  test_error_responses.py  test_result_endpoint.py  test_sync_openapi.py
tests/e2e/: __init__.py  test_ocr_easyocr.py  test_ocr_ocrmac.py  test_ocr_tesseract.py
tests/integration/: test_dynamic_routes_v2.py  test_file_handler.py  test_lifespan.py  test_rate_limiting.py  test_sync_endpoints.py  test_tesseract_params.py  test_upload_samples.py
tests/integration/api/: test_health.py  test_ocr_endpoints.py
tests/integration/api/v2/: test_discovery.py  test_dynamic_process.py
tests/integration/services/: test_file_handler.py
tests/mocks/: mock_engines.py  mock_entry_points.py
tests/performance/: test_memory_usage.py
tests/unit/: test_config.py  test_easyocr_hocr.py  test_engine_registry.py  test_gpu.py  test_hocr.py  test_job_manager.py  test_metrics.py  test_models.py  test_ocr_processor.py  test_ocrmac_engine.py  test_ocrmac_hocr.py  test_platform.py  test_security.py  test_sync_routes.py  test_validators.py
tests/unit/api/: test_dynamic_routes.py  test_dynamic_routes_v2.py
tests/unit/api/middleware/: test_error_handler.py
tests/unit/services/: test_cleanup.py
tests/unit/services/ocr/: test_registry_v2.py  test_registry_v2_loading.py
tests/unit/services/ocr/engines/: test_tesseract.py
tests/unit/utils/: test_gpu.py  test_hocr.py  test_validators.py
