[project]
name = "restful-ocr"
version = "1.1.0"
description = "RESTful OCR API service for document processing with HOCR output"
readme = "README.md"
requires-python = ">=3.11"
# Base dependencies: Core API + Tesseract OCR (lightweight flavor)
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "uvicorn[standard]>=0.24.0",
    "pytesseract>=0.3.0",
    "pdf2image>=1.16.0",
    "redis>=5.0.0",
    "slowapi>=0.1.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
    # Pin opencv-python-headless to avoid broken 4.11.0.86 release
    # See: https://github.com/opencv/opencv-python/issues (version 4.11.0.86 has missing attributes)
    "opencv-python-headless>=4.8.0,<4.11.0",
]

[project.optional-dependencies]
# EasyOCR: Deep learning OCR with GPU support
# Install: pip install -e .[easyocr]
# Docker: Use full image (not lite)
easyocr = [
    "easyocr>=1.7.0",
    "torch>=2.0.0",
]

# ocrmac: macOS-only Vision framework OCR
# Install: pip install -e .[ocrmac]  (macOS only)
# Docker: Not compatible (Docker uses Linux even on Mac)
ocrmac = [
    "ocrmac>=0.1.0; sys_platform == 'darwin'",
]

# Full: All OCR engines
# Install: pip install -e .[full]
# Docker: Use full image
full = [
    "easyocr>=1.7.0",
    "torch>=2.0.0",
    "ocrmac>=0.1.0; sys_platform == 'darwin'",
]

[dependency-groups]
# Development dependencies
# Install: uv sync --group dev
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "pyright>=1.1.407",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "macos: marks tests that require macOS platform (deselect with '-m \"not macos\"')",
]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
